# pretix-plugin-attendance-certificate

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml
pretix_attendance_certificate/: __init__.py  apps.py  models.py  render.py  signals.py  tasks.py  urls.py
pretix_attendance_certificate/migrations/: 0001_initial.py
pretix_attendance_certificate/templates/pretix_attendance_certificate/: history_fragment_attendance_certificate.html  send_form_fragment_attendance_certificate.html
pretix_attendance_certificate/views/: editor.py  emails.py
